# Python08

python08/ex0/: construct.py
python08/ex1/: loading.py  pyproject.toml
python08/ex2/: oracle.py
